# snake_game

./: .gitignore  CMakeLists.txt  README.md  Snake game.c  Snake game.h
